<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Cellar</string>
    <string name="app_desc">Cellar is a download manager.</string>
    <string name="action_cancel_all">Cancel download</string>
    <string name="action_cancel_all_short">Cancel</string>
    <string name="action_checksum">Checksum</string>
    <string name="action_checksum_md5" translatable="false">MD5</string>
    <string name="action_checksum_sha1" translatable="false">SHA-1</string>
    <string name="action_checksum_sha256" translatable="false">SHA-256</string>
    <string name="action_checksum_sha512" translatable="false">SHA-512</string>
    <string name="action_create_download">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_multi">Delete selected files</string>
    <string name="action_defer">Defer</string>
    <string name="action_defer_stop">Don\'t defer anymore</string>
    <string name="action_download">Save</string>
    <string name="action_download_all">Save all</string>
    <string name="action_download_ask_cancel">Cancel?</string>
    <string name="action_download_image">Save image</string>
    <string name="action_download_mail">Save mail</string>
    <string name="action_download_text">Save text</string>
    <string name="action_download_video">Save video</string>
    <string name="action_export_zip">Backup</string>
    <string name="action_filter_reset">Reset filter</string>
    <string name="action_help" translatable="false">\?</string>
    <string name="action_import">Import</string>
    <string name="action_install">Install</string>
    <string name="action_install_cancel">Cancel installation</string>
    <string name="action_layout_grid">Grid</string>
    <string name="action_load">Load</string>
    <string name="action_log" translatable="false">Log</string>
    <string name="action_manage_credentials">Credentials</string>
    <string name="action_manage_queue">Queue</string>
    <string name="action_more_info">Info</string>
    <string name="action_move_up">Push up</string>
    <string name="action_network_info">Network info</string>
    <string name="action_next_from_queue">Next, please!</string>
    <string name="action_protect_from_deletion_off">Remove protection</string>
    <string name="action_protect_from_deletion_on">Protect</string>
    <string name="action_queue_add">Add to queue</string>
    <string name="action_queue_clear">Clear queue</string>
    <string name="action_rename">Rename</string>
    <string name="action_restore">Restore</string>
    <string name="action_retry">Retry</string>
    <string name="action_retry_authorization">Enter credentials</string>
    <string name="action_saveas_kml">Save location</string>
    <string name="action_saveas_text">Save as text</string>
    <string name="action_saveas_vcalendar">Save as calendar file</string>
    <string name="action_saveas_vcard">Save as contact file</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_share_multi">Share selected files</string>
    <string name="action_stop">Stop</string>
    <string name="action_store_search">Search store</string>
    <string name="action_systemsettings_app">App settings</string>
    <string name="action_wallpaper">Use as wallpaper</string>
    <string name="error_auth_unsupported">Unsupported authorization (\"%1$s\")!</string>
    <string name="error_cant_delete">Cannot delete \"%1$s\"!</string>
    <plurals name="error_cant_delete_count">
        <item quantity="one">Cannot delete %1$d file!</item>
        <item quantity="other">Cannot delete %1$d files!</item>
    </plurals>
    <string name="error_cant_handle">Cannot handle \"%1$s\"!</string>
    <string name="error_cant_handle_that">Cannot handle that!</string>
    <string name="error_checksum_failed">Checksum calculation failed!</string>
    <string name="error_file_already_exists">This file already exists!</string>
    <string name="error_import_failed">Import failed: %1$s</string>
    <string name="error_import_failed_empty_file">Empty file!</string>
    <string name="error_import_failed_invalid_file">Invalid file!</string>
    <string name="error_import_failed_pwd">Import failed: Wrong passphrase!</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="error_not_found">Not found: \"%1$s\"!</string>
    <string name="error_own_file">%1$s passed one of %2$s\'s own files back to %3$s!</string>
    <string name="error_own_file_naughty">A naughty app</string>
    <string name="error_packageinfo">Apparently this file does not contain a valid application!</string>
    <string name="error_queue_pop_failed">No download has been started.</string>
    <string name="error_rename_failed">Failed to rename \"%1$s\"!</string>
    <string name="error_store_failed">The data cannot be stored.</string>
    <string name="help_referer">Click here to ask Wikipedia about referers.</string>
    <string name="help_referer_wp">https://en.m.wikipedia.org/wiki/HTTP_referer</string>
    <string name="help_uri">The internet address (\"https://…\") that points to the file (text, picture, video, etc.) to load.</string>
    <string name="hint_credential_realm">valid for \"%1$s\"</string>
    <string name="hint_credential_userid">User ID \"%1$s\"</string>
    <string name="hint_password">password</string>
    <string name="hint_userid">user id</string>
    <string name="http_useragent" translatable="false">Mozilla/5.0 (Windows NT 10.0; WOW64; rv:68.0) Gecko/20100101 Firefox/68.0</string>
    <string name="label_audiocodec">Audio codec: %1$s</string>
    <string name="label_author">Author: %1$s</string>
    <string name="label_blacklist_age">%1$s\nUpdated: %2$s</string>
    <string name="label_comment">Comment</string>
    <string name="label_create">Create</string>
    <string name="label_date">Date: %1$s</string>
    <string name="label_deferred">deferred</string>
    <string name="label_document_provider">&#127282;&#127284;&#127291;&#127291;&#127280;&#127297;</string>
    <string name="label_duration">Duration: %1$s</string>
    <string name="label_encrypted">Encrypted</string>
    <string name="label_error_report">Report</string>
    <string name="label_exposure">Shutter speed: 1/%1$s s</string>
    <string name="label_extended">Extended</string>
    <string name="label_file_justtext">Text from %1$s.txt</string>
    <string name="label_filename">File name</string>
    <string name="label_files_from_the_cellar">Files from the cellar</string>
    <string name="label_filetype_application">%1$s file</string>
    <string name="label_filetype_audio">%1$s audio</string>
    <string name="label_filetype_image">%1$s image</string>
    <string name="label_filetype_textcalendar">Calendar</string>
    <string name="label_filetype_textplain">Plain text</string>
    <string name="label_filetype_video">%1$s video</string>
    <string name="label_filetype_xvcard" translatable="false">vcard</string>
    <string name="label_fnumber">f-number: ƒ/%1$s</string>
    <string name="label_fps">Frame rate: %1$d / s</string>
    <string name="label_from">from</string>
    <string name="label_from_host">From: %1$s</string>
    <string name="label_ignore">Ignore</string>
    <string name="label_invalid">⚡INVALID⚡</string>
    <string name="label_iso" translatable="false">ISO: %1$d</string>
    <string name="label_language">Language: %1$s</string>
    <string name="label_later">Later</string>
    <string name="label_load_later">Load later</string>
    <string name="label_load_now">Load immediately</string>
    <string name="label_location">Location: %1$s %2$s %3$s %4$s</string>
    <string name="label_model">Model: %1$s</string>
    <string name="label_network_address">Address</string>
    <string name="label_network_metered">Metered</string>
    <string name="label_network_metered_restrictions">Metered network restrictions</string>
    <string name="label_new_download">New download</string>
    <string name="label_no">No</string>
    <string name="label_no_current_downloads">No current downloads.</string>
    <string name="label_no_thanks">No, thanks</string>
    <string name="label_notifications_channel">Notifications from the</string>
    <string name="label_notifications_channel_important">Accentuated notifications from the</string>
    <string name="label_or">or</string>
    <string name="label_pages">Pages: %1$d</string>
    <string name="label_permissions">Permissions</string>
    <string name="label_playlist_audio">audio</string>
    <string name="label_playlistitem" translatable="false">%1$dx%2$d, %3$d fps, %4$d kbps</string>
    <string name="label_playlistitem_bps_nofps" translatable="false">%1$dx%2$d, %3$d kbps</string>
    <string name="label_playlistitem_bps_nofps_nosize" translatable="false">%1$d kbps</string>
    <string name="label_playlistitem_fps_nobps" translatable="false">%1$dx%2$d, %3$d fps</string>
    <string name="label_playlistitem_nobps_nofps" translatable="false">%1$dx%2$d</string>
    <string name="label_playlist_video">video</string>
    <string name="label_progress">Progress %1$d %%</string>
    <string name="label_pwd">Password</string>
    <string name="label_quoted">\"%1$s\"</string>
    <string name="label_referer" translatable="false">Referer</string>
    <plurals name="label_root_summary">
        <item quantity="one">%1$d file, %2$s</item>
        <item quantity="other">%1$d files, %2$s</item>
    </plurals>
    <string name="label_root_summary_empty">No files</string>
    <string name="label_service_clipspy_desc">Watches the system clipboard for downloadable resources.</string>
    <string name="label_service_loader_desc">This is used to download files from the interweb.</string>
    <string name="label_shrug" translatable="false">¯\_(ツ)_/¯</string>
    <string name="label_signature">Signature</string>
    <string name="label_size_bytes">File size: %1$s bytes</string>
    <string name="label_size_xy">Size: %1$d × %2$d</string>
    <string name="label_uri" translatable="false">URI</string>
    <string name="label_use_aes">Use AES encryption</string>
    <string name="msg_pwd_zip">You may enter a password to encrypt the file. Leave it empty to export without encryption.</string>
    <string name="pref_backup_restore">Backup / Restore</string>
    <string name="pref_blacklist">Blacklist</string>
    <string name="pref_cat_nightmode">Dark mode</string>
    <string name="pref_cat_network">Network</string>
    <string name="pref_clipspy">Monitor the clipboard</string>
    <string name="pref_licenses">Licenses</string>
    <string name="pref_network_allow_metered">Allow metered connections</string>
    <string name="pref_network_allow_metered_summary_off">Downloads over metered connections are not allowed.</string>
    <string name="pref_network_allow_metered_summary_on">Downloads over metered connections are allowed.</string>
    <string name="pref_night">Time-dependent night mode</string>
    <string name="pref_night_from">Dark mode from</string>
    <string name="pref_night_summary_off">Night mode follows the system settings.</string>
    <string name="pref_night_summary_on">Night mode is switched at the given times.</string>
    <string name="pref_night_to">Dark mode until</string>
    <string name="pref_proxy">Proxy server</string>
    <string name="pref_proxy_hint">HOST:PORT</string>
    <string name="pref_proxy_type">Proxy</string>
    <string name="pref_proxy_type_default" translatable="false">DIRECT</string>
    <string name="pref_proxy_restrict">Restrict proxy to</string>
    <string name="pref_share_this">Share this App</string>
    <string name="pref_sort">Sort</string>
    <string name="pref_sort_date">by date</string>
    <string name="pref_sort_name">by name</string>
    <string name="pref_sort_size">by size</string>
    <string name="pref_via_vpn">VPN connections</string>
</resources>