<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ download_view.xml
  ~ Copyright (c) livodeu 2021.
  ~ This source code is subject to the license to be found in the file LICENSE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_share_item"
        android:contentDescription="@string/action_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="50"
        android:title="@string/action_share"
        android:tooltipText="@string/action_share"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_rename"
        android:contentDescription="@string/action_rename"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="55"
        android:title="@string/action_rename"
        android:tooltipText="@string/action_rename"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_delete"
        android:contentDescription="@string/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="60"
        android:title="@string/action_delete"
        android:tooltipText="@string/action_delete"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_protect"
        android:icon="@drawable/ic_baseline_security_24"
        android:orderInCategory="61"
        android:title="@string/action_protect_from_deletion_on"
        />
    <item
        android:id="@+id/action_more_info"
        android:contentDescription="@string/action_more_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:orderInCategory="65"
        android:title="@string/action_more_info"
        android:tooltipText="@string/action_more_info"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_install"
        android:icon="@drawable/ic_baseline_hardware_24"
        android:orderInCategory="67"
        android:title="@string/action_install"
        />
    <item
        android:id="@+id/action_store_search"
        android:orderInCategory="68"
        android:title="@string/action_store_search"
        />
    <item
        android:id="@+id/action_wallpaper"
        android:orderInCategory="70"
        android:title="@string/action_wallpaper"
        />
    <item
        android:id="@+id/action_checksum"
        android:contentDescription="@string/action_checksum"
        android:icon="@drawable/ic_baseline_check_circle_24"
        android:orderInCategory="100"
        android:title="@string/action_checksum"
        >
        <menu>
            <item
                android:id="@+id/action_checksum_md5"
                android:orderInCategory="10"
                android:title="@string/action_checksum_md5"
                android:tooltipText="@string/action_checksum_md5"
                tools:ignore="UnusedAttribute" />
            <item
                android:id="@+id/action_checksum_sha1"
                android:orderInCategory="20"
                android:title="@string/action_checksum_sha1"
                android:tooltipText="@string/action_checksum_sha1"
                tools:ignore="UnusedAttribute" />
            <item
                android:id="@+id/action_checksum_sha256"
                android:orderInCategory="30"
                android:title="@string/action_checksum_sha256"
                android:tooltipText="@string/action_checksum_sha256"
                tools:ignore="UnusedAttribute" />
            <item
                android:id="@+id/action_checksum_sha512"
                android:orderInCategory="40"
                android:title="@string/action_checksum_sha512"
                android:tooltipText="@string/action_checksum_sha512"
                tools:ignore="UnusedAttribute" />
        </menu>
    </item>
</menu>