<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ export_zip.xml
  ~ Copyright (c) livodeu 2021.
  ~ This source code is subject to the license to be found in the file LICENSE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:filterTouchesWhenObscured="true"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="5"
        android:fontFamily="sans-serif-condensed"
        android:foregroundGravity="center_vertical"
        android:hyphenationFrequency="normal"
        android:text="@string/msg_pwd_zip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_pwd"
            android:inputType="text|textPassword"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"
            >
            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchAes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="sans-serif-condensed"
        android:hyphenationFrequency="normal"
        android:switchPadding="8dp"
        android:text="@string/label_use_aes"
        android:textColor="@color/colorTextSecondary"
        tools:ignore="UnusedAttribute" />
</LinearLayout>