<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ create_download.xml
  ~ Copyright (c) livodeu 2021.
  ~ This source code is subject to the license to be found in the file LICENSE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewDownloadActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditTextUrl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_uri"
            app:boxStrokeErrorColor="@color/colorSecondary"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:helperTextTextAppearance="@style/HelperText"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:filterTouchesWhenObscured="true"
                android:fontFamily="sans-serif-condensed"
                android:imeOptions="actionDone|flagNoPersonalizedLearning|flagForceAscii"
                android:importantForAutofill="no"
                android:inputType="text|textUri"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                tools:text="https://www.host.org/file.txt"
                >
                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- the switch to expand or collapse the bottom part -->

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchExtended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_extended"
        app:switchPadding="4dp"
        />

    <!-- the bottom part for further options -->

    <LinearLayout
        android:id="@+id/layoutReferer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditTextReferer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/label_referer"
            app:endIconMode="custom"
            app:helperTextTextAppearance="@style/HelperText"
            tools:endIconDrawable="@drawable/ic_baseline_auto_fix_normal_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextReferer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:filterTouchesWhenObscured="true"
                android:fontFamily="sans-serif-condensed"
                android:imeOptions="actionDone|flagNoPersonalizedLearning|flagForceAscii"
                android:importantForAutofill="no"
                android:inputType="text|textUri"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                tools:text="https://www.host.org"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchHeld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/label_load_now"
        />

</LinearLayout>